Setup load balance

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,8 +25,8 @@ http {
     ssl_session_timeout 1h;
 
     sendfile        on;
-    tcp_nopush     on;
-    tcp_nodelay on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
 
     keepalive_timeout  65;
 
@@ -35,6 +35,6 @@ http {
     gzip  on;
     gzip_disable "msie6";
 
-    include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 }
