--- a/infodengue.conf
+++ b/infodengue.conf
@@ -1,20 +1,20 @@
 upstream infodengue {
-    server 172.18.0.11:8000;
-    server 172.18.0.7:8000;
+    server 159.69.25.201:8000;
+    server 159.69.25.201:8080;
 }
 
 server {
     listen       80;
-    #listen  [::]:80;
+    listen  [::]:80;
     server_name  localhost;
 
     #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    access_log  /var/log/nginx/infodengue.access.log  main;
 
     location / {
         #root   /usr/share/nginx/html;
         #index  index.html index.htm;
-	proxy_pass http://infodengue;
+        proxy_pass http://infodengue;
     }
 
     #error_page  404              /404.html;
