Alter IP upstream infodengue

--- a/infodengue.conf
+++ b/infodengue.conf
@@ -1,6 +1,6 @@
 upstream infodengue {
-    server 159.69.25.201:8000;
-    server 159.69.25.201:8080;
+    server 172.20.0.2:8000;
+    server 172.24.0.6:8000;
 }
 
 server {
@@ -10,6 +10,8 @@ server {
 
     #charset koi8-r;
     access_log  /var/log/nginx/infodengue.access.log  main;
+    error_log  /var/log/nginx/infodengue.error.log ;
+
 
     location / {
         #root   /usr/share/nginx/html;
